1.2.0 (#22)
* refactor

* data pack

* update

* update

* spotless

* refactor

* version

* update